--- a/ConstructionSite/Areas/ConstructionAdmin/Views/About/Update.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/About/Update.cshtml
@@ -6,7 +6,6 @@
 
 <style>
     .add-model {
-        margin-left: 20px;
         background-color: rgb(241,242, 247);
     }
 
@@ -25,68 +24,69 @@
         color: #fff;
     }
 </style>
-
-<div class="row">
-    <div class="col-lg-12">
-        <section class="panel add-model">
-            <header class="panel-heading">
-                Update About
-            </header>
-            <hr />
-            <div class="panel-body add-body">
-                <form role="form" class="form-horizontal tasi-form" asp-area="ConstructionAdmin" asp-controller="About" asp-action="Update" method="post" enctype="multipart/form-data">
-                    <input type="hidden" name="Id" value="@Model.Id" />
-                    <input type="hidden" name="aboutID" value="@Model.aboutID" />
-                    <input type="hidden" name="imageId" value="@Model.imageId" />
-                    <div class="form-group">
-                        <div class="col-lg-10">
-                            <input type="text" asp-for="TittleAz" id="f-name" class="form-control" placeholder="Title AZE">
+<div class="container">
+    <div class="row">
+        <div class="col-lg-12">
+            <section class="panel add-model">
+                <header class="panel-heading">
+                    Update About
+                </header>
+                <hr />
+                <div class="panel-body add-body">
+                    <form role="form" class="form-horizontal tasi-form" asp-area="ConstructionAdmin" asp-controller="About" asp-action="Update" method="post" enctype="multipart/form-data">
+                        <input type="hidden" name="Id" value="@Model.Id" />
+                        <input type="hidden" name="aboutID" value="@Model.aboutID" />
+                        <input type="hidden" name="imageId" value="@Model.imageId" />
+                        <div class="form-group">
+                            <div class="col-lg-12">
+                                <input type="text" asp-for="TittleAz" id="f-name" class="form-control" placeholder="Title AZE">
+                            </div>
                         </div>
-                    </div>
-                    <div class="form-group">
-                        <div class="col-lg-10">
-                            <input type="text" asp-for="TittleEn" id="f-name" class="form-control" placeholder="Title ENG">
+                        <div class="form-group">
+                            <div class="col-lg-12">
+                                <input type="text" asp-for="TittleEn" id="f-name" class="form-control" placeholder="Title ENG">
+                            </div>
                         </div>
-                    </div>
-                    <div class="form-group">
-                        <div class="col-lg-10">
-                            <input type="text" asp-for="TittleRu" id="f-name" class="form-control" placeholder="Title RU">
+                        <div class="form-group">
+                            <div class="col-lg-12">
+                                <input type="text" asp-for="TittleRu" id="f-name" class="form-control" placeholder="Title RU">
+                            </div>
                         </div>
-                    </div>
-                    <div class="form-group ">
-                        <div class="col-lg-10">
-                            <textarea asp-for="ContentAz" rows="15" class="form-control " id="ccomment" placeholder="Content AZE"></textarea>
+                        <div class="form-group ">
+                            <div class="col-lg-12">
+                                <textarea asp-for="ContentAz" rows="15" class="form-control " id="ccomment" placeholder="Content AZE"></textarea>
+                            </div>
                         </div>
-                    </div>
-                    <div class="form-group ">
-                        <div class="col-lg-10">
-                            <textarea asp-for="ContentEn" rows="15" class="form-control " id="ccomment" placeholder="Content ENG"></textarea>
+                        <div class="form-group ">
+                            <div class="col-lg-12">
+                                <textarea asp-for="ContentEn" rows="15" class="form-control " id="ccomment" placeholder="Content ENG"></textarea>
+                            </div>
                         </div>
-                    </div>
-                    <div class="form-group ">
-                        <div class="col-lg-10">
-                            <textarea asp-for="ContentRu" rows="15" class="form-control " id="ccomment" placeholder="Content RU"></textarea>
+                        <div class="form-group ">
+                            <div class="col-lg-12">
+                                <textarea asp-for="ContentRu" rows="15" class="form-control " id="ccomment" placeholder="Content RU"></textarea>
+                            </div>
                         </div>
-                    </div>
-                    <div class="form-group ">
-                        <div class="col-lg-10">
-                            <img src="@Model.Image" width="240" height="280" alt="Alternate Text" />
+                        <div class="form-group ">
+                            <div class="col-lg-12">
+                                <img src="@Model.Image" width="240" height="280" alt="Alternate Text" />
+                            </div>
                         </div>
-                    </div>
-                    <div class="form-group">
-                        <div class="col-lg-10">
-                            <input type="file" name="file" placeholder="Images" id="f-name" class="form-control">
+                        <div class="form-group">
+                            <div class="col-lg-12">
+                                <input type="file" name="file" placeholder="Images" id="f-name" class="form-control">
+                            </div>
                         </div>
-                    </div>
-                    <div class="form-group" style="margin-left: 63%;">
-                        <div class="col-lg-offset-2 col-lg-10">
-                            <button class="btn btn-success about-button" type="submit">Save</button>
-                            <button class="btn btn-default cancel-button" type="button">Cancel</button>
+                        <div class="form-group" style="margin-left: 84%;">
+                            <div class="col-lg-offset-2 col-lg-12">
+                                <button class="btn btn-success about-button" type="submit">Save</button>
+                                <button class="btn btn-default cancel-button" type="button">Cancel</button>
+                            </div>
                         </div>
-                    </div>
-                </form>
-            </div>
-        </section>
+                    </form>
+                </div>
+            </section>
+        </div>
     </div>
 </div>
 
