--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Portfolio/Add.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Portfolio/Add.cshtml
@@ -2,7 +2,6 @@
 
     <style>
         .add-model {
-            margin-left: 20px;
             background-color: rgb(241,242, 247);
         }
 
@@ -21,6 +20,7 @@
         }
     </style>
 
+    <div class="container">
         <div class="row">
             <div class="col-lg-12">
                 <section class="panel add-model">
@@ -31,22 +31,22 @@
                     <div class="panel-body add-body">
                         <form role="form" class="form-horizontal tasi-form" asp-area="ConstructionAdmin" asp-controller="Portfolio" asp-action="Add" method="post">
                             <div class="form-group">
-                                <div class="col-lg-10">
+                                <div class="col-lg-12">
                                     <input type="text" asp-for="NameAz" placeholder="Name AZE" id="f-name" class="form-control">
                                 </div>
                             </div>
                             <div class="form-group">
-                                <div class="col-lg-10">
+                                <div class="col-lg-12">
                                     <input type="text" asp-for="NameEn" placeholder="Name ENG" id="f-name" class="form-control">
                                 </div>
                             </div>
                             <div class="form-group">
-                                <div class="col-lg-10">
+                                <div class="col-lg-12">
                                     <input type="text" asp-for="NameRu" placeholder="Name RU" id="f-name" class="form-control">
                                 </div>
                             </div>
-                            <div class="form-group" style="margin-left: 63%;">
-                                <div class="col-lg-offset-2 col-lg-10">
+                            <div class="form-group" style="margin-left: 84%;">
+                                <div class="col-lg-offset-2 col-lg-12">
                                     <button class="btn btn-success about-button" type="submit">Save</button>
                                     <button class="btn btn-default cancel-button" type="button">Cancel</button>
                                 </div>
@@ -56,7 +56,7 @@
                 </section>
             </div>
         </div>
-    
+    </div>
 
 @section scripts{
 <script>
