--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Portfolio/Update.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Portfolio/Update.cshtml
@@ -5,7 +5,6 @@
 
 <style>
     .add-model {
-        margin-left: 20px;
         background-color: rgb(241,242, 247);
     }
 
@@ -24,40 +23,41 @@
     }
 </style>
 
-
-<div class="row">
-    <div class="col-lg-12">
-        <section class="panel add-model">
-            <header class="panel-heading">
-                Portfolio Update
-            </header>
-            <hr />
-            <div class="panel-body add-body">
-                <form role="form" class="form-horizontal tasi-form" asp-area="ConstructionAdmin" asp-controller="Portfolio" asp-action="Update" method="post" enctype="multipart/form-data">
-                    <div class="form-group">
-                        <div class="col-lg-10">
-                            <input type="text" asp-for="NameAz" id="f-name" class="form-control" placeholder="Name AZE">
+<div class="container">
+    <div class="row">
+        <div class="col-lg-12">
+            <section class="panel add-model">
+                <header class="panel-heading">
+                    Portfolio Update
+                </header>
+                <hr />
+                <div class="panel-body add-body">
+                    <form role="form" class="form-horizontal tasi-form" asp-area="ConstructionAdmin" asp-controller="Portfolio" asp-action="Update" method="post" enctype="multipart/form-data">
+                        <div class="form-group">
+                            <div class="col-lg-12">
+                                <input type="text" asp-for="NameAz" id="f-name" class="form-control" placeholder="Name AZE">
+                            </div>
                         </div>
-                    </div>
-                    <div class="form-group">
-                        <div class="col-lg-10">
-                            <input type="text" asp-for="NameEn" id="f-name" class="form-control" placeholder="Name ENG">
+                        <div class="form-group">
+                            <div class="col-lg-12">
+                                <input type="text" asp-for="NameEn" id="f-name" class="form-control" placeholder="Name ENG">
+                            </div>
                         </div>
-                    </div>
-                    <div class="form-group">
-                        <div class="col-lg-10">
-                            <input type="text" asp-for="NameRu" id="f-name" class="form-control" placeholder="Name RU">
+                        <div class="form-group">
+                            <div class="col-lg-12">
+                                <input type="text" asp-for="NameRu" id="f-name" class="form-control" placeholder="Name RU">
+                            </div>
                         </div>
-                    </div>
-                    <div class="form-group" style="margin-left: 63%;">
-                        <div class="col-lg-offset-2 col-lg-10">
-                            <button class="btn btn-success about-button" type="submit">Save</button>
-                            <button class="btn btn-default cancel-button" type="button">Cancel</button>
+                        <div class="form-group" style="margin-left: 84%;">
+                            <div class="col-lg-offset-2 col-lg-12">
+                                <button class="btn btn-success about-button" type="submit">Save</button>
+                                <button class="btn btn-default cancel-button" type="button">Cancel</button>
+                            </div>
                         </div>
-                    </div>
-                </form>
-            </div>
-        </section>
+                    </form>
+                </div>
+            </section>
+        </div>
     </div>
 </div>
 
